--- a/dm-materials/enemies/pirate-faction.org
+++ b/dm-materials/enemies/pirate-faction.org
@@ -17,24 +17,25 @@ Pirates use single-shot pistols that deal high damage with low accuracy. Loyal t
 
 #+BEGIN_CENTER
 _*CR*_[fn:1]: 2
-_*HP*_: 11
+_*HP*_: 65
 _*PP*_[fn:2]: 10
 #+END_CENTER
 ** Ability Scores
 | Ability | Score | Bonus | Related Skills                                           |
 |---------+-------+-------+----------------------------------------------------------|
 | CON     |    14 |    +1 |                                                          |
-| STR     |    12 |    +3 | Athletics                                                |
+| STR     |    12 |    +3 | Athletics                                                 bB|
 | DEX     |    17 |    +2 | Acrobatics, Sleight of Hand, Stealth                     |
 | INT     |    10 |    +0 | Arcana, History, Investigation, Religion                 |
 | WIS     |    11 |    +1 | Animal Handling, Insight, Medicine, Perception, Survival |
 | CHA     |    10 |    +0 | Deception, Intimidation, Performance, Persuasion         |
 ** Inventory
-| Armor          | Weapons                                             | Items                         |
-|----------------+-----------------------------------------------------+-------------------------------|
-| Rags 12 AC     | Bronze Scimitar (1d6) / slashing damage +3 to hit   | Bottle of Grog, Thieves Tools |
-|                | Flintlock Pistol (1d8) / piercing damage +1 to hit  |                               |
+| Armor      | Weapons                                            | Items          |
+|------------+----------------------------------------------------+----------------|
+| Rags 12 AC | Bronze Scimitar (1d6) / slashing +3 to hit         | Bottle of Grog |
+|            | Flintlock Pistol (1d8) / piercing +1 to hit        | Thieves Tools  |
 ** Special Traits
+- _*In the Rigging*_: Gain advantage on all Atheltics and Acrobatics checks when on a naval vessel.
 ** Actions
 - _*Multi-attack*_: Make two attacks with the equipped weapon
 * Commander Troops
@@ -44,20 +45,19 @@ _*PP*_[fn:2]: 10
 :END:
 The cook of a pirate ship. Probably the only person the crew is truely loyal to, so he will inspire great confidence in them if he is torn away from this work into the battlefield.
 #+BEGIN_CENTER
-_*CR*_[fn:1]: 4/10
-_*HP*_: 14
+_*CR*_[fn:1]: 3/10
+_*HP*_: 85
 _*PP*_[fn:2]: 11
 #+END_CENTER
-
 *** Ability Scores
 | Ability | Score | Bonus | Related Skills                                           |
 |---------+-------+-------+----------------------------------------------------------|
 | CON     |    18 |    +4 |                                                          |
-| STR     |    20 |    +5 | Athletics                                                |
-| DEX     |    15 |    +2 | Acrobatics, Sleight of Hand, Stealth                     |
+| STR     |    14 |    +2 | Athletics                                                |
+| DEX     |    15 |    +3 | Acrobatics, Sleight of Hand, Stealth                     |
 | INT     |    10 |    +0 | Arcana, History, Investigation, Religion                 |
 | WIS     |    13 |    +2 | Animal Handling, Insight, Medicine, Perception, Survival |
-| CHA     |    12 |    +1 | Deception, Intimidation, Performance, Persuasion         |
+| CHA     |    13 |    +2 | Deception, Intimidation, Performance, Persuasion         |
 *** Inventory
 | Armor | Weapons | Items |
 |-------+---------+-------|
@@ -68,6 +68,33 @@ _*PP*_[fn:2]: 11
 :PROPERTIES:
 :ID:       afa2e807-0771-46bb-98eb-0b77f24da57f
 :END:
+Second in command of a pirate crew.
+#+BEGIN_CENTER
+_*CR*_[fn:1]: 3/10
+_*HP*_: 95
+_*PP*_[fn:2]: 14
+#+END_CENTER
+*** Ability Scores
+| Ability | Score | Bonus | Related Skills                                           |
+|---------+-------+-------+----------------------------------------------------------|
+| CON     |    14 |    +2 |                                                          |
+| STR     |    18 |    +5 | Athletics                                                |
+| DEX     |    14 |    +2 | Acrobatics, Sleight of Hand, Stealth                     |
+| INT     |    10 |    +0 | Arcana, History, Investigation, Religion                 |
+| WIS     |    12 |    +1 | Animal Handling, Insight, Medicine, Perception, Survival |
+| CHA     |     8 |    -1 | Deception, Intimidation, Performance, Persuasion         |
+*** Inventory
+| Armor             | Weapons                                      | Items                    |
+|-------------------+----------------------------------------------+--------------------------|
+| Chain Shirt 15 AC | Silver Longsword 1d8 / slashing +7 to hit    | Navigators Tools         |
+|                   | Flintlock Pistol x4 1d8 / piercing +2 to hit | Vial of Serpent Venom x2 |
+|                   |                                              | Spyglass                 |
+|                   |                                              | 15 Gold, 1 Dragon Peso   |
+*** Special Traits
+- Perception +4
+*** Actions
+- _*Poison Sword*_: Slash an enemy with a slyly poisoned sword. Do the normal damage and force the creature to make a CON saving throw or take 1d6 poison damage per turn.
+- _*Direct Crew*_: When a ally within hearing distance of the first mate makes an attack roll or saving throw, the first mate can utter a command or warning. The ally adds 1d6 to the roll, provided it can understand the language
 ** Pirate Captain
 :PROPERTIES:
 :ID:       f6a4850c-0ca5-4a17-befb-b7e0e4bc7a72
@@ -76,25 +103,30 @@ Captain of a pirate ship. Earned their crew's loyalty though brutality, promise 
 
 #+BEGIN_CENTER
 _*CR*_[fn:1]: 4/10
-_*HP*_: 14
-_*PP*_[fn:2]: 11
+_*HP*_: 135
+_*PP*_[fn:2]: 15
 #+END_CENTER
-
 *** Ability Scores
 | Ability | Score | Bonus | Related Skills                                           |
 |---------+-------+-------+----------------------------------------------------------|
-| CON     |    14 |    +1 |                                                          |
-| STR     |    12 |    +3 | Athletics                                                |
-| DEX     |    17 |    +2 | Acrobatics, Sleight of Hand, Stealth                     |
-| INT     |    10 |    +0 | Arcana, History, Investigation, Religion                 |
-| WIS     |    11 |    +1 | Animal Handling, Insight, Medicine, Perception, Survival |
-| CHA     |    10 |    +0 | Deception, Intimidation, Performance, Persuasion         |
+| CON     |    15 |    +2 |                                                          |
+| STR     |    20 |    +5 | Athletics                                                |
+| DEX     |    18 |    +3 | Acrobatics, Sleight of Hand, Stealth                     |
+| INT     |    11 |    +1 | Arcana, History, Investigation, Religion                 |
+| WIS     |    12 |    +2 | Animal Handling, Insight, Medicine, Perception, Survival |
+| CHA     |    14 |    +3 | Deception, Intimidation, Performance, Persuasion         |
 *** Inventory
-| Armor | Weapons | Items |
-|-------+---------+-------|
-|       |         |       |
+| Armor                       | Weapons                                        | Items              |
+|-----------------------------+------------------------------------------------+--------------------|
+| Studded Leather Armor 15 AC | Steel Scimitar 2d6 / slashing +6 to hit        | Treasure Chest Key |
+|                             | Flintlock Pistol x6 (1d8) / piercing +2 to hit | Navigators Tools   |
+|                             |                                                |                    |
+|                             |                                                | 30 Gold, 3 Dragon Pesos |
 *** Special Traits
+- Persuasion +4
 *** Actions
+- _*Direct Crew*_: All allies within hearing distance of the captian get 1d6 added to their next attack roll or saving throw, provided it can understand the language.
+- _*Multiattack*_: The captain can make two attacks with its swords or pistols.
 * Boss Troops
 ** Pirate Admiral
 #+BEGIN_CENTER
